--- a/static/index.html
+++ b/static/index.html
@@ -3,10 +3,31 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Phaser with a sprinkle of ES6 Dust!</title>
+	<link rel="stylesheet" href="styles/bootstrap.min.css">
 	<link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-	<div id="content"></div>
+	<div class="container">
+		<h1>Phaser Lunch &amp; Learn</h1>
+		<div class="row">
+			<div class="col-xs-12">
+				<div id="content"></div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-xs-12">
+				<div class="form-inline">
+					<div class="form-group">
+						<label>Random Text</label>
+						<input id="text_input" type="text" class="form-control"/>
+					</div>
+					<button id="text_button" class="btn btn-default">Submit</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
+	<script src="scripts/static.js"></script>
 	<script src="scripts/phaser.min.js"></script>
 	<script src="scripts/game.js"></script>
 </body>
