Add font awesome eraser icon

--- a/static/index.html
+++ b/static/index.html
@@ -3,6 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Phaser with a sprinkle of ES6 Dust!</title>
+	<link rel="stylesheet" href="styles/font-awesome.min.css">
 	<link rel="stylesheet" href="styles/bootstrap.min.css">
 	<link rel="stylesheet" href="styles/main.css">
 </head>
@@ -22,6 +23,9 @@
 						<input id="text_input" type="text" class="form-control"/>
 					</div>
 					<button id="text_button" class="btn btn-default">Submit</button>
+					<button id="text_erase" class="btn btn-default">
+						<i class="fa fa-eraser" aria-hidden="true"></i>	
+					</button>				
 				</div>
 			</div>
 		</div>
