Deploy project with surge

--- a/static/index.html
+++ b/static/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Phaser Lunch &amp; Learn</h1>
-		<div class="panel panel-default">
-			<div class="panel-body">
+		<h1>Phaser Lunch &amp; Learn Surge Test</h1>
+		<div class="row">
+			<div class="col-xs-12">
 				<div id="content"></div>
 			</div>
 		</div>
