Rename title and add source code link

--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Phaser Lunch &amp; Learn Surge Test</h1>
+		<h1>Phaser Runer</h1>
 		<div class="row">
 			<div class="col-xs-12">
 				<div id="content"></div>
@@ -42,6 +42,9 @@
 					</div>			
 				</div>
 			</div>
+		</div>
+		<div class="row">
+			<a href="https://github.com/rmkubik/phaser-runner">Source Code</a>
 		</div>
 	</div>
 
