Add col padding to source link

--- a/static/index.html
+++ b/static/index.html
@@ -44,7 +44,9 @@
 			</div>
 		</div>
 		<div class="row">
-			<a href="https://github.com/rmkubik/phaser-runner">Source Code</a>
+			<div class="col-xs-12">
+				<a href="https://github.com/rmkubik/phaser-runner">Source Code</a>
+			</div>
 		</div>
 	</div>
 
